[workspace]
members = [
    "crates/zproxy-core",
    "crates/zproxy-engine",
    "crates/zproxy-gui",
    "crates/zproxy-build",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"
md-5 = "0.10"
hmac = "0.12"
rand = "0.8"
sysinfo = "0.33"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
