[package]
name = "zproxy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
