[package]
name = "zproxy-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zproxy"
path = "src/main.rs"

[dependencies]
zproxy-core = { path = "../zproxy-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
