[package]
name = "zproxy-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zproxy-gui"
path = "src/main.rs"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui"]

[dependencies]
zproxy-core = { path = "../zproxy-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.21"
